backends/drm: Detect mode content change instead of comparing mode pointers

This fixes Plasma Desktop / kwin resizing problems at least for virtual
machines running off the vmwgfx Linux kernel driver

BUG: 477985